[Media Router] Use the correct histogram to record sink source.

The incorrect histogram name was being used to record the discovery source for
Cast devices.  This fixes that and renames the related method accordingly.

Bug: 773487
Change-Id: Ib1ca58f7071eda4ccaa87500bb416a10d324634f
Reviewed-on: https://chromium-review.googlesource.com/717022
Reviewed-by: Bin Zhao <zhaobin@chromium.org>
Commit-Queue: mark a. foltz <mfoltz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508456}
Former-commit-id: 5e3220addfdff5447450010f135d09df7915c4dd